--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1"
