--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "tsc --watch && nodemon dist/index.js",
+    "start": "tsc && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,11 @@
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.5",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.3.3"
   }
 }
