--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "Start app Back-end Smile task in node.js",
   "main": "app.js",
-  "type": "module",
   "scripts": {
-    "dev": "tsc --watch && nodemon dist/index.js",
+    "dev": "nodemon index.ts",
     "start": "tsc && node dist/index.js"
   },
   "repository": {
@@ -20,6 +19,8 @@
   },
   "homepage": "https://github.com",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -33,9 +34,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
