changing the vercel config, intalling the @vercel/node dev dependencie

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/dist/(.*)",
-      "dest": "/dist"
-    }
-  ],
-	"rewrites": [{ "source": "/dist/(.*)", "destination": "/dist" }]
+	"builds": [
+		{
+			"src": "dist/index.js",
+			"use": "@vercel/node",
+			"config": { "includeFiles": ["dist/**"] }
+		}
+	],
+	"routes": [
+		{
+			"src": "/(.*)",
+			"dest": "/dist/index.js"
+		}
+	]
 }
+
