--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
+    "@vercel/node": "^3.0.17",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
