--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc --build",
-    "dev": "nodemon api/index.ts",
+    "dev": "nodemon index.ts",
     "start": "tsc && node dist/index.js"
   },
   "repository": {
