--- a/package.json
+++ b/package.json
@@ -1,47 +1,58 @@
 {
-  "name": "quicksnackback",
-  "version": "1.0.0",
-  "description": "Start app Back-end Smile task in node.js",
-  "main": "app.js",
-  "scripts": {
-    "build": "tsc --build",
-    "dev": "nodemon index.ts",
-    "start": "tsc && node dist/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/"
-  },
-  "homepage": "https://github.com",
-  "dependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/multer": "^1.4.11",
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.1",
-    "nodemailer": "^6.9.7"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.5",
-    "@types/nodemailer": "^6.4.14",
-    "@vercel/node": "^3.0.17",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  }
+	"name": "quicksnackback",
+	"version": "1.0.0",
+	"description": "Start app Back-end Smile task in node.js",
+	"main": "app.js",
+	"scripts": {
+		"build": "rimraf dist && tsc",
+		"ts.check": "tsc --project tsconfig.json",
+		"add-build": "git add dist",
+		"dev": "nodemon index.ts",
+		"start": "tsc && node dist/index.js"
+	},
+	"pre-commit": [
+		"ts.check",
+		"build",
+		"add-build"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/"
+	},
+	"homepage": "https://github.com",
+	"dependencies": {
+		"@types/bcrypt": "^5.0.2",
+		"@types/multer": "^1.4.11",
+		"bcrypt": "^5.1.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.1",
+		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
+		"mysql2": "^3.6.1",
+		"nodemailer": "^6.9.7"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.5",
+		"@types/morgan": "^1.9.9",
+		"@types/node": "^20.10.5",
+		"@types/nodemailer": "^6.4.14",
+		"@vercel/node": "^3.0.17",
+		"nodemon": "^3.0.1",
+		"pre-commit": "^1.2.2",
+		"rimraf": "^5.0.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.3.3"
+	}
 }
+
+
